--- a/eef/assets/rooms.yaml
+++ b/eef/assets/rooms.yaml
@@ -9,18 +9,59 @@ rooms:
   front:
     size: [1280, 136]
     walkareas:
-      - poly: [0, 0, 1280, 0, 1280, 16, 574,16, 574, 5, 544, 5, 520, 30, 520, 50, 430,50,430,30,406,5,378,5,378,16,0,16]
+      - poly: [0, 0, 1280, 0, 1280, 16, 574,16, 574, 5, 544, 5, 520, 30, 520, 48, 176, 48,176,47, 430,47,430,30,406,5,378,5,378,16,0,16]
     textures: [0, 1]
     nodes:
-      bg-000:
-        pos: [0, 0, -1]
-        model: main/bg_front_000
-      bg-001:
-        pos: [476, 0, -1]
-        model: main/bg_front_001
-      bg-002:
-        pos: [960, 0, -1]
-        model: main/bg_front_002
+      bg:
+        pos: [0,0,0]
+        tilemap: [0, 1, 8, 0x8002, 160,
+          0, 0, 0x8003, 0, 1, 0x8004, 0x8001, 45, 0, 2, 3, 4, 2, 0x8001, 15, 5, 0x1002, 4, 0x1003, 0x1002, 0x8001, 89, 0,
+          0, 0, 0x8003, 0, 1, 0x8004, 0x8001, 44, 0, 16, 17, 18, 19, 20, 21, 0x8001, 13, 22, 0x1015, 0x1014, 0x1013, 0x1012, 17, 0x1010, 0x8001, 56, 0, 0x8001, 32, 36,
+          6, 6, 0x8003, 0, 1, 0x8004, 0x8001, 7, 35, 7, 35, 35, 7, 35, 7, 35, 35, 35, 35, 35, 8, 0x8005, 11, 9, 10, 0x8006, 15, 0x8007, 0x8007, 23, 24, 25, 26, 19, 20, 21, 0x8001, 11, 22, 0x1015, 0x1014, 0x1013, 0x101A, 0x1019, 0x1018, 0x1017, 27, 28, 28, 0x8005, 11, 10, 9, 0x8006, 29,
+                6, 6, 6, 6, 4, 0x8001, 9, 6, 4, 0x8001, 47, 6,
+          31, 31, 0x8003, 0, 1, 0x8004, 0x8007, 31, 31, 31, 0x8007, 31, 0x8007, 30, 30, 31, 31, 30, 31, 30, 31, 30, 0x8007, 31, 38, 0x8005, 11, 10, 9, 0x8006, 39, 40, 40, 40, 40, 41, 0x8009, 40,42, 26, 19, 20, 21, 0x8001, 9, 22, 0x1015, 0x1014, 0x1013, 0x101A, 0x1019, 43, 44, 45,
+                0x8005, 12, 10, 9, 0x8006, 10, 0x1026, 30, 31, 0x8007, 0x8007, 30, 30, 31, 0x8007, 31, 0x8007, 30, 0x8007, 30, 0x8007, 31, 0x8007, 31, 0x8007, 31, 31, 0x8007, 0x8007,31,0x8007,31,30,30,30,31,0x8007,30,
+                0x8001, 7, 0x8007,31, 30, 0x8007, 0x8007, 30, 0x8007, 31, 30, 0x8007, 0x8007, 30, 0x8007, 31, 0x8007, 0x8007, 31, 0x8007, 0x8007, 30, 30, 0x8007, 31, 0x8007, 0x8007,
+          0x8008, 21, 4, 0x800A, 1, 38, 0x8005, 14, 9, 10, 0x8006, 9, 9, 0x8009, 0x8009, 0x8004, 41, 25,26,49, 0x8001,11,22,49,0x101A,0x1019,13,50,0x8005,13,9,10,0x8006,9,0x1026,
+          0x8008, 21, 5, 0x8001, 30, 51, 52, 53, 54, 0x8001, 11, 17, 0x1036, 0x1035, 0x1034, 0x8001, 30, 51,
+          0x8008, 31, 6, 56, 0x8001, 19, 17, 58, 17, 59, 0x8001, 5, 60,
+                0x8008, 21, 6, 0x8003, 5, 0x8005, 5, 0x8007, 55, 0x8006, 0x8005, 10, 0x8007, 57, 0x8006
+
+        ]
+
+          #0x02, 47, 2, 0,
+#          0x03, 0, 2, 3, 4, 2, 0xFF,
+#          0x01, 15, 5,
+#          0x03, 0x1002, 4, 6, 0x1002, 0, 0xFF,
+#          0x02, 56, 2, 0,
+#          0x01, 32, 0,
+#          0x04, 47, 1, 0x03, 17, 18, 19, 20, 21, 22, 0xFF,
+#          0x01, 13, 23, 0x03, 0x1016, 0x1015, 0x1014, 0x1013, 18, 0x1011, 0xFF,
+#          0x04, 0,2, 0x01, 10, 7, 0x03, 8, 36, 36, 8, 36, 8, 36, 36, 36, 36, 9, 0xFF,
+#          0x06, 9, 0x03, 10, 11, 0xFF, 0x03, 12, 13, 14, 15, 16, 0xFF,
+#          0x04, 47, 2, 0x03, 24, 25, 26, 27, 20, 21, 22, 0xFF, 0x01, 11, 23,
+#          0x03, 0x1016, 0x1015, 0x1014, 0x101B, 0x101A, 0x1019, 0x1018, 28, 29, 29, 11, 14, 0xFF,
+#          0x06, 10, 0x03, 11, 10, 0xFF, 0x03, 30, 7, 7, 7, 7, 4, 7,7,7,7,7,7,7,7,7,4,7,7,7,7,7,7,7,7,7,7,4,7,7,7,7,7,7,7,7,7,7,0xFF,
+#          # stars
+#          0x04, 4, 11, 0x03, 35,0xFF,
+#          0x04, 21, 15, 0x03, 35, 0xFF,
+#          0x04, 25, 15, 0x03, 35, 0xFF,
+#          0x04, 24, 16, 0x03, 35, 0xFF,
+#          # gate
+#          0x04, 128, 1, 0x01, 4, 37,
+          #0x05,135,0x04,2,1,0x02,1,10,38,0xFF]
+
+
+          #0x05, 10, 0x02, 1, 4, 1]
+      #bg-000:
+      #  pos: [0, 0, -1]
+      #  model: main/bg_front_000
+#      bg-001:
+#        pos: [476, 0, -1]
+#        model: main/bg_front_001
+#      bg-002:
+#        pos: [960, 0, -1]
+#        model: main/bg_front_002
 
 
 
@@ -107,6 +148,7 @@ state:
   _player_speed: 150.
   player: dave       # this marks the player item
   room: front
+  yback: 136
 
 # define the verb sets
 verbs:
